Use Integer.valueOf and Long.valueOf